--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,9 +3,12 @@ name: Build Docker Image
 
 # push tag 时触发执行
 on:
-  push:
-    tags:
-      - v*
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version number'
+        required: true
+        default: 'latest'
 
 # 定义环境变量, 后面会使用
 # 定义 APP_NAME 用于 docker build-args
